sidebar responsived text

--- a/css/styles.css
+++ b/css/styles.css
@@ -2478,6 +2478,7 @@ body {
 /* line 16, ../sass/_varisco.scss */
 .header__site-name, #block-system-main-menu h2 {
   font-size: 1em;
+  font-size: 1.25vw;
   line-height: 1em;
   font-weight: normal;
   margin-bottom: 0.5em;
