--- a/css/styles.css
+++ b/css/styles.css
@@ -2505,6 +2505,11 @@ body {
 }
 
 /* line 29, ../sass/_varisco.scss */
+.page__title {
+  color: #494849;
+}
+
+/* line 32, ../sass/_varisco.scss */
 .page-node .page__title {
   color: #DA6A27;
   display: block;
@@ -2512,45 +2517,45 @@ body {
   text-transform: uppercase;
 }
 
-/* line 36, ../sass/_varisco.scss */
+/* line 39, ../sass/_varisco.scss */
 .section-studio .page__title {
   display: none;
 }
-/* line 39, ../sass/_varisco.scss */
+/* line 42, ../sass/_varisco.scss */
 .section-studio p {
   margin-left: auto;
   margin-right: auto;
   width: 725px;
 }
-/* line 44, ../sass/_varisco.scss */
+/* line 47, ../sass/_varisco.scss */
 .section-studio p.studio-page-image {
   margin: 0;
   width: auto;
 }
 
-/* line 50, ../sass/_varisco.scss */
+/* line 53, ../sass/_varisco.scss */
 .field-name-field-project-description {
   border-top: 1px solid #9C9A9A;
   border-bottom: 1px solid #9C9A9A;
   color: #494849;
 }
 
-/* line 55, ../sass/_varisco.scss */
+/* line 58, ../sass/_varisco.scss */
 .view-project-client {
   text-transform: uppercase;
 }
-/* line 57, ../sass/_varisco.scss */
+/* line 60, ../sass/_varisco.scss */
 .view-project-client a {
   color: #DA6A27;
 }
 
-/* line 61, ../sass/_varisco.scss */
+/* line 64, ../sass/_varisco.scss */
 #block-block-1 {
   font-size: 1em;
   font-size: 1vw;
   padding-left: 10px;
 }
-/* line 65, ../sass/_varisco.scss */
+/* line 68, ../sass/_varisco.scss */
 #block-block-1 p {
   color: #494849;
   font-weight: bold;
@@ -2558,21 +2563,21 @@ body {
   margin: 0;
   padding: 0;
 }
-/* line 72, ../sass/_varisco.scss */
+/* line 75, ../sass/_varisco.scss */
 #block-block-1 .studio-address {
   font-size: 0.74em;
   font-size: 0.74vw;
 }
-/* line 80, ../sass/_varisco.scss */
+/* line 83, ../sass/_varisco.scss */
 #block-block-1 .studio-email a {
   color: #C15D21;
 }
 
-/* line 86, ../sass/_varisco.scss */
+/* line 89, ../sass/_varisco.scss */
 #block-system-main-menu h2 {
   display: none;
 }
-/* line 89, ../sass/_varisco.scss */
+/* line 92, ../sass/_varisco.scss */
 #block-system-main-menu ul {
   font-size: 4em;
   font-size: 4.5vw;
@@ -2581,58 +2586,58 @@ body {
   padding: 0 0 0 10px;
   text-transform: uppercase;
 }
-/* line 97, ../sass/_varisco.scss */
+/* line 100, ../sass/_varisco.scss */
 #block-system-main-menu ul li {
   list-style: none;
   list-style-position: outside;
 }
-/* line 100, ../sass/_varisco.scss */
+/* line 103, ../sass/_varisco.scss */
 #block-system-main-menu ul li a {
   color: #717272;
   text-decoration: none;
 }
-/* line 104, ../sass/_varisco.scss */
+/* line 107, ../sass/_varisco.scss */
 #block-system-main-menu ul li a:hover, #block-system-main-menu ul li a.active-trail {
   color: #DA6A27;
 }
 
-/* line 111, ../sass/_varisco.scss */
+/* line 114, ../sass/_varisco.scss */
 .mean-container .mean-bar {
   background: none repeat scroll 0 0 transparent;
 }
-/* line 114, ../sass/_varisco.scss */
+/* line 117, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 116, ../sass/_varisco.scss */
+/* line 119, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span {
   background: none repeat scroll 0 0 #FFFFFF;
   display: block;
 }
-/* line 120, ../sass/_varisco.scss */
+/* line 123, ../sass/_varisco.scss */
 .mean-container a.meanmenu-reveal span.mean-head {
   background: none repeat scroll 0 0 transparent;
   color: #FFFFFF;
 }
-/* line 125, ../sass/_varisco.scss */
+/* line 128, ../sass/_varisco.scss */
 .mean-container .mean-nav {
   background: none repeat scroll 0 0 #717272;
 }
-/* line 127, ../sass/_varisco.scss */
+/* line 130, ../sass/_varisco.scss */
 .mean-container .mean-nav h2 {
   color: #FFFFFF;
 }
-/* line 130, ../sass/_varisco.scss */
+/* line 133, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a {
   background: none repeat scroll 0 0 #717272;
   color: #FFFFFF;
 }
-/* line 134, ../sass/_varisco.scss */
+/* line 137, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a:hover {
   background: none repeat scroll 0 0 #717272;
   color: #DA6A27;
 }
-/* line 138, ../sass/_varisco.scss */
+/* line 141, ../sass/_varisco.scss */
 .mean-container .mean-nav ul li a.mean-expand:hover {
   background: none repeat scroll 0 0 #717272;
 }
