sidebar mobile layout

--- a/sass/_varisco.scss
+++ b/sass/_varisco.scss
@@ -13,7 +13,7 @@ body {
   background: none repeat scroll 0 0 $light-gray;
   min-height: 100%;
 }
-.header__site-name,#block-system-main-menu h2 {
+#block-system-main-menu h2 {
   font-size: 1em;
   font-size: 1.25vw;
   line-height: 1em;
