--- a/sass/components/_misc.scss
+++ b/sass/components/_misc.scss
@@ -91,7 +91,6 @@
 
 /* Wrapper for website name and slogan. */
 .header__name-and-slogan {
-  float: left;
   padding-left: 10px;
 }
 
@@ -103,7 +102,7 @@
     font-weight: bolder;
   }
   .site-slogan {
-    font-weight: normal;
+    font-weight: lighter;
   }
 }
 
