sidebar mobile layout

--- a/sass/layouts/_responsive.scss
+++ b/sass/layouts/_responsive.scss
@@ -182,7 +182,8 @@ $zen-auto-include-item-base: false;
     font-size: 0.74vw;
   }
   .studio-phone {
-
+      float: none;
+      margin-right: 1em;
   }
   .studio-email {
     a {
@@ -373,7 +374,7 @@ $zen-auto-include-item-base: false;
     font-size: 0.74vw;
   }
   .studio-phone {
-
+      float: none;
   }
   .studio-email {
     a {
